--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="ascensionMod/patches/" kind="src" path="src/main/java"/>
-	<classpathentry kind="lib" path="C:/Users/willi/OneDrive/Skrivebord/sts modding/asc+/lib/BaseMod.jar"/>
-	<classpathentry kind="lib" path="C:/Users/willi/OneDrive/Skrivebord/sts modding/asc+/lib/desktop-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/willi/OneDrive/Skrivebord/sts modding/asc+/lib/ModTheSpire.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_181"/>
+	<classpathentry kind="lib" path="E:/STS modding/asc+/lib/BaseMod.jar"/>
+	<classpathentry kind="lib" path="E:/STS modding/asc+/lib/desktop-1.0.jar"/>
+	<classpathentry kind="lib" path="E:/STS modding/asc+/lib/ModTheSpire.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
