--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>AscensionPlusMod</groupId>
-  <artifactId>AscensionPlusMod</artifactId>
-  <name>AscensionPlus</name>
+  <groupId>AscensionRebornMod</groupId>
+  <artifactId>AscensionRebornMod</artifactId>
+  <name>AscensionReborn</name>
   <description>Additional levels of ascension for Slay The Spire</description>
     <dependencies>
         <dependency>
@@ -15,14 +15,14 @@
         <dependency>
             <groupId>basemod</groupId>
             <artifactId>basemod</artifactId>
-            <version>2.6.0</version>
+            <version>5.10.0</version>
             <scope>system</scope>
             <systemPath>${basedir}/lib/BaseMod.jar</systemPath>
         </dependency>
         <dependency>
 	        <groupId>com.evacipated.cardcrawl</groupId>
 		      <artifactId>ModTheSpire</artifactId>
-		      <version>2.6.0</version>
+		      <version>3.8.3</version>
 		      <scope>system</scope>
           <systemPath>${basedir}/lib/ModTheSpire.jar</systemPath>
 	      </dependency>
